避免warn